--- a/myPortfolio/src/index.css
+++ b/myPortfolio/src/index.css
@@ -1,3 +1,4 @@
+
 html {
   box-sizing: border-box;
   margin: 0;
@@ -8,6 +9,8 @@ body{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #0e2337;
+  color: white;
 }
 
 p{
