--- a/myPortfolio/src/App.css
+++ b/myPortfolio/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight&family=Sora:wght@300&display=swap');
+
+
 html {
   box-sizing: border-box;
   margin: 0;
@@ -8,6 +11,7 @@ body{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Sora' , sans-serif;
 }
 
 p{
