--- a/myPortfolio/src/components/about/about.scss
+++ b/myPortfolio/src/components/about/about.scss
@@ -1,6 +1,17 @@
+@import '../../variables.scss';
+
 .aboutSection{
-    p {
+   
+    max-width: 60%;
+    &--info{
         margin: 0;
-        color: white;
+        font-size: 20px;
+    
+
+        
+    }
+    &--title{
+        font-size: 40px;
+        color: $secondary_color;
     }
 }
