--- a/myPortfolio/src/components/experience/experience.scss
+++ b/myPortfolio/src/components/experience/experience.scss
@@ -1,4 +1,66 @@
+@import '../../variables.scss';
+.experienceContainer{
+
+  &--title{
+    color: $secondary_color;
+    font-size: 40px;
+  }
+}
+
 .experienceList{
     display: flex;
     gap: 10px;
+}
+
+.contents{
+  display: flex;
+  justify-content: center;
+  height: 170px;
+  width: 65vw;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 30px;
+  border-radius: 10px;
+  &--text{
+    display: flex;
+    gap: 20px;
+    max-width: 700px;
+    margin-bottom: 5px;
+    &__icon{
+        color: $secondary_color
+
+    }
+    
+    
+  }
+
+}
+
+.stackList{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100px;
+    gap: 30px;
+    &--item{
+      font-size: 20px;
+    }
+}
+
+
+.navList{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 80%;
+    margin-left: 50px;
+}
+
+.stackSection{
+    margin-top: 50px;
+    &--title{
+      font-size: 40px;
+      color: $secondary_color;
+    }
 }
