--- a/myPortfolio/src/components/header/header.scss
+++ b/myPortfolio/src/components/header/header.scss
@@ -1,8 +1,38 @@
-
+@import '../../variables.scss';
 .header{
     h4 {
      margin: 0;
+     font-size: 80px;
     }
-    margin-top: 30px;
+    &--name{
+      color: $secondary_color;
+    }
+    margin-top: 350px;
+  &--subtitle{
+    font-size: 30px;
     color: white;
+  }
+  &--button{
+    width: 200px;
+    height: 100px;
+    background: none;
+    border: 2px solid $secondary_color ;
+    border-radius: 10px;
+    margin-left: 50px;
+    transition: .2s ease-in;
+    &__icon{
+      height: 30px;
+      width: 30px;
+      color: white;
+      &__text{
+        font-family: 'Sora';
+        color: white;
+        font-size: 20px;
+      }
+    }
+    &:hover{
+      border: 2px solid white;
+    }
+    
+  }
 }
