--- a/myPortfolio/src/components/projects/projects.scss
+++ b/myPortfolio/src/components/projects/projects.scss
@@ -1,10 +1,9 @@
+
+
+
 .projectsContainer{
-    background-color: magenta;
-    width: 90%;
+    display: flex;
     overflow: hidden;
+ 
 }
 
-.slideContent{
-    min-width: 100%;
-    text-align: center;
-}
