--- a/myPortfolio/src/components/carousel/carousel.scss
+++ b/myPortfolio/src/components/carousel/carousel.scss
@@ -16,7 +16,7 @@
 .slideShowContainer{
     display: flex;
     max-width: 600px;
-
+    transition: .3s ease all;
     border-radius: 10px;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 
