--- a/myPortfolio/src/components/header/header.scss
+++ b/myPortfolio/src/components/header/header.scss
@@ -13,21 +13,41 @@
     color: white;
   }
   &--button{
-    width: 200px;
-    height: 100px;
+    padding: 10px;
     background: none;
     border: 2px solid $secondary_color ;
     border-radius: 10px;
     margin-left: 50px;
     transition: .2s ease-in;
+    width: 200px;
+    height: 90px;
+    position: relative;
+    display: flex;
+    justify-content: center;
     &__icon{
       height: 30px;
       width: 30px;
       color: white;
+      &__git{
+        width: 200px;
+        height: 90px;
+        color: $secondary_color;
+      }
+      &__linkedin{
+        width: 200px;
+        height: 90px;
+        color: $secondary_color;
+      }
       &__text{
         font-family: 'Sora';
         color: white;
         font-size: 20px;
+        position: absolute;
+        top: 45px;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+      
       }
     }
     &:hover{
@@ -35,4 +55,9 @@
     }
     
   }
+}
+
+.links{
+  display: flex;
+  gap: 80px;
 }
