--- a/myPortfolio/src/components/home/home.scss
+++ b/myPortfolio/src/components/home/home.scss
@@ -4,7 +4,30 @@
     width: 100vw;
     height: 100vh;
     margin-left: 20px;
-  
+    &--navBar{
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 45px;
+        ul {
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 30px;
+            gap: 20px;
+            li {
+                
+                a{
+                    transition: .3s ease-in;
+                &:hover{
+                    color: white;
+                }
+                    text-decoration: none;
+                    color: $secondary_color;
+                }
+            }
+        }
+    }
     &--pageHeader{
        margin-bottom: 60px;
     }
