--- a/myPortfolio/src/components/home/home.scss
+++ b/myPortfolio/src/components/home/home.scss
@@ -38,6 +38,7 @@
         justify-content: center;
         flex-direction: column;
         margin-top: 60px;
+
         &__title{
             align-self: flex-start;
             font-size: 40px;
@@ -50,3 +51,11 @@
    
 }
 
+@media (max-width: 600px) {
+    .mainContainer{
+        &--navBar{
+            display: none;
+            visibility: hidden;
+        }
+    }
+}
