--- a/myPortfolio/src/App.css
+++ b/myPortfolio/src/App.css
@@ -11,7 +11,12 @@ body{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #0e2337;
+  color: white;
+  width: 100vw;
+  height: 100vh;
   font-family: 'Sora' , sans-serif;
+  padding: 15px;
 }
 
 p{
