--- a/myPortfolio/src/components/experience/experience.scss
+++ b/myPortfolio/src/components/experience/experience.scss
@@ -66,7 +66,7 @@
 
 @media (max-width: 600px){
   .experienceContainer{
-    width: 600px;
+    width: 100vw;
   }
   .contents{
     display: flex;
