--- a/myPortfolio/src/components/about/about.scss
+++ b/myPortfolio/src/components/about/about.scss
@@ -27,7 +27,7 @@
             margin: 0;
             font-size: 30px;
 
-            min-width: 550px;
+            min-width: 100vw;
             
         }
         &--title{
