--- a/myPortfolio/src/components/header/header.scss
+++ b/myPortfolio/src/components/header/header.scss
@@ -76,7 +76,7 @@
 @media (max-width: 600px){
   .header{
     margin-top: 60px;
-    width: 600px;
+    width: 100vw;
     &--button{
       height: 80px;
       width: 150px;
