--- a/myPortfolio/src/components/ProjectsCard/projectsCard.scss
+++ b/myPortfolio/src/components/ProjectsCard/projectsCard.scss
@@ -1,5 +1,11 @@
 .projectCard{
+    p{
+        margin: 0;
+        max-width: 100vw;
+    }
     &--list{
         display: flex;
+        max-width: 100vw;
+        flex-wrap: wrap;
     }
 }
