--- a/myPortfolio/src/components/projects/projects.scss
+++ b/myPortfolio/src/components/projects/projects.scss
@@ -1,6 +1,7 @@
 
 .projects{
     display: flex;
+    max-width: 100vw;
 
 
 }
@@ -13,7 +14,6 @@
 
 @media (max-width: 600px){
     .projectsContainer{
-        margin-left: 200px;
         margin-bottom: 100px;
    
     }
