--- a/myPortfolio/src/components/about/about.scss
+++ b/myPortfolio/src/components/about/about.scss
@@ -25,9 +25,9 @@
             display: flex;
             justify-content: center;
             margin: 0;
-            font-size: 30px;
+            font-size: 25px;
 
-            min-width: 100vw;
+            max-width: 90vw;
             
         }
         &--title{
