--- a/myPortfolio/src/components/experience/experience.scss
+++ b/myPortfolio/src/components/experience/experience.scss
@@ -91,11 +91,17 @@
     }
   
   }
+  .stack{
+    display: flex;
+    justify-content: flex-start;
+  }
   .stackList{
     display: flex;
     flex-wrap: wrap;
     max-width: 100vw;
-    gap: 40px;
+    gap: 25px;
+    padding: 10px;
+    justify-content: flex-start;
     &--item{
       font-size: 30px;
     }
