--- a/myPortfolio/src/components/header/header.scss
+++ b/myPortfolio/src/components/header/header.scss
@@ -77,6 +77,9 @@
   .header{
     margin-top: 60px;
     width: 100vw;
+    h4{
+      font-size: 50px;
+    }
     &--button{
       height: 80px;
       width: 150px;
