--- a/myPortfolio/src/components/ProjectsCard/projectsCard.scss
+++ b/myPortfolio/src/components/ProjectsCard/projectsCard.scss
@@ -1,11 +1,23 @@
 .projectCard{
-    p{
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-bottom: 40px;
+    &--name{
+        color: white;
+    }
+    &--desc{
         margin: 0;
         max-width: 100vw;
     }
     &--list{
         display: flex;
-        max-width: 100vw;
+        max-width: 80vw;
         flex-wrap: wrap;
+        gap: 10px;
+    }
+    &--icons{
+        position: absolute;
+        top: 25px;
+        right: 45px;
     }
 }
