--- a/myPortfolio/src/components/ProjectsCard/projectsCard.scss
+++ b/myPortfolio/src/components/ProjectsCard/projectsCard.scss
@@ -1,23 +1,39 @@
+@import '../../variables.scss';
+
 .projectCard{
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin-bottom: 40px;
+    padding: 20px;
     &--name{
-        color: white;
+        color: $secondary_color;
+        font-weight: 400px;
+        font-size: 25px;
     }
     &--desc{
         margin: 0;
         max-width: 100vw;
+        font-size: 20px;
     }
     &--list{
         display: flex;
         max-width: 80vw;
         flex-wrap: wrap;
         gap: 10px;
+        color: $secondary_color;
     }
     &--icons{
         position: absolute;
         top: 25px;
         right: 45px;
+        a{
+            text-decoration: none;
+            svg{
+                color: $secondary_color;
+                height: 25px;
+                width: 25px;
+
+            }
+        }
     }
 }
