--- a/myPortfolio/src/components/ProjectsCard/projectsCard.scss
+++ b/myPortfolio/src/components/ProjectsCard/projectsCard.scss
@@ -5,6 +5,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin-bottom: 40px;
     padding: 20px;
+    border-radius: 10px;
     &--name{
         color: $secondary_color;
         font-weight: 400px;
