--- a/myPortfolio/src/App.css
+++ b/myPortfolio/src/App.css
@@ -13,10 +13,10 @@ body{
   padding: 15px;
   background-color: #0e2337;
   color: white;
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   font-family: 'Sora' , sans-serif;
-  overflow-x: hidden;
+
 }
 
 
