--- a/myPortfolio/src/components/ProjectsCard/projectsCard.scss
+++ b/myPortfolio/src/components/ProjectsCard/projectsCard.scss
@@ -27,6 +27,8 @@
         position: absolute;
         top: 25px;
         right: 45px;
+        display: flex;
+        gap: 10px;
         a{
             text-decoration: none;
             svg{
