--- a/myPortfolio/src/components/home/home.scss
+++ b/myPortfolio/src/components/home/home.scss
@@ -1,8 +1,9 @@
 @import '../../variables.scss';
 
 .mainContainer{
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
+   
     &--navBar{
         position: fixed;
         top: 0;
