--- a/myPortfolio/src/components/header/header.scss
+++ b/myPortfolio/src/components/header/header.scss
@@ -82,8 +82,11 @@
       font-size: 50px;
     }
     &--button{
-      height: 80px;
-      width: 150px;
+      height: 90px;
+      width: 90px;
+      a{
+        font-size: 15px;
+      }
       &__icon{
         &__git{
           width: 100px;
@@ -101,5 +104,6 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 8px;
+    min-width: 100%;
   }
 }
